kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: everydle
  namespace: default
  labels:
    app: everydle
spec:
  selector:
    app: everydle
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
