kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: everydle-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - everydle.unruffled-nightingale.com
      secretName: everydle-tls
  rules:
    - host: everydle.unruffled-nightingale.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: everydle
                port:
                  number: 80
